--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch @ https://download.pytorch.org/whl/cpu/torch-1.6.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
-torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.7.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
+torch
+torchvision
 voila
 fastai>=2
-pillow<7
+Pillow==7.1.2
 packaging
-ipywidgets==7.5.1
+ipywidgets==7.6.5
